# WapProject

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini
locators/: __init__.py  home_locators.py  search_results_locators.py  streamer_page_locators.py
pages/: base_page.py  home_page.py  search_results_page.py  streamer_page.py
tests/: conftest.py  test_search_streamer.py
utils/: browser_setup.py
