[tool.poetry]
name = "twitch_test_framework"
version = "0.1.0"
description = "Selenium-based test automation framework for Twitch.tv"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.10.0"
pytest = "^7.3.1"
python-dotenv = "^1.0.0"
webdriver-manager = "^3.8.6"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
]
